--- a/Cargo.toml
+++ b/Cargo.toml
@@ -112,5 +112,5 @@ proconio = { version = "=0.3.6", features = ["derive"] }
 
 # ---------------------------------------------------------------------
 
-[dev-dependencies]
-cli_test_dir = "0.1"
+# [dev-dependencies]
+# cli_test_dir = "0.1"
